# teste_bruno

./: .gitignore  README.md  main.py  pyproject.toml
